# Krynet

./: README.md
Android/app/: AndroidManifest.xml  CMakeLists.txt  MainActivity.java  build.gradle  main.cpp  version.json
Linux/App/src/: AppRun.bash  krynet.desktop  krynet_linux_secure.cpp  version.json
Linux/setup/: KrynetSetup.cpp
MacOS/app/: AppDelegate.swift  Info.plist  version.json
MacOS/setup/: KrynetSetup.cpp
Windows/app/: app.manifest  krynet.rc  krynet_windows.cpp  version.json
Windows/setup/: KrynetSetup.cpp
iOS/app/: AppDelegate.swift  Info.plist  WebViewController.swift  version.json
